[gd_scene load_steps=19 format=3 uid="uid://cf18xd0j4qbtp"]

[ext_resource type="Script" uid="uid://cy0nsvt0koqrx" path="res://gameManager.gd" id="1_3mrqo"]
[ext_resource type="PackedScene" uid="uid://dr38nyb6ubmbn" path="res://passaro.tscn" id="1_wbfu4"]
[ext_resource type="PackedScene" uid="uid://odpnmh65g5b0" path="res://cano.tscn" id="3_sb48q"]
[ext_resource type="Texture2D" uid="uid://c75v45a23pd38" path="res://Art/background-night.png" id="3_yhmtn"]
[ext_resource type="Texture2D" uid="uid://6utnnc4mk6e0" path="res://Art/background-day.png" id="4_sb48q"]
[ext_resource type="Texture2D" uid="uid://doy03try4wtt8" path="res://Art/base.png" id="5_r0x5m"]
[ext_resource type="Script" uid="uid://ceof1kyyk2kd0" path="res://gerador_cano.gd" id="5_t88pq"]
[ext_resource type="PackedScene" uid="uid://dwxaqjd2a2c5d" path="res://cano_especial.tscn" id="5_yyih5"]
[ext_resource type="FontFile" uid="uid://cngfsede8vb85" path="res://flappy-font.ttf" id="6_r0x5m"]
[ext_resource type="Texture2D" uid="uid://ctdu6cxqhslp2" path="res://Art/gameover.png" id="8_joorw"]
[ext_resource type="Texture2D" uid="uid://dctvjtrm01hd1" path="res://Art/message.png" id="9_2vekm"]
[ext_resource type="AudioStream" uid="uid://bpov00wtvnksb" path="res://audio/Whimsical.mp3" id="10_yx171"]
[ext_resource type="AudioStream" uid="uid://bphwlo444ffh4" path="res://audio/gravity_inverter.ogg" id="12_gwjdr"]
[ext_resource type="AudioStream" uid="uid://dvqb6xsxx58gh" path="res://audio/wind (1).mp3" id="13_lvtmh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t88pq"]
size = Vector2(576, 212.5)

[sub_resource type="Animation" id="Animation_yyih5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HUD/Escuridao:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lvtmh"]
resource_name = "escurecer"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HUD/Escuridao:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.33333, 1.96667),
"transitions": PackedFloat32Array(2, 1, 0.5, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjyg3"]
_data = {
&"RESET": SubResource("Animation_yyih5"),
&"escurecer": SubResource("Animation_lvtmh")
}

[node name="Game" type="Node2D" node_paths=PackedStringArray("gameoverControl", "inicioControl", "highscoreLabel", "fundo")]
texture_filter = 1
script = ExtResource("1_3mrqo")
gameoverControl = NodePath("CanvasLayer/Gameover")
inicioControl = NodePath("CanvasLayer/Start")
highscoreLabel = NodePath("CanvasLayer/HUD/Highscore Legenda2")
fundo = NodePath("fundParallax/Sprite2D")
fundoDia = ExtResource("4_sb48q")
fundoNoite = ExtResource("3_yhmtn")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_yx171")
autoplay = true

[node name="fundParallax" type="Parallax2D" parent="."]
texture_filter = 1
repeat_size = Vector2(570, 0)
autoscroll = Vector2(-50, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="fundParallax"]
position = Vector2(852, 186)
scale = Vector2(2, 2)
texture = ExtResource("4_sb48q")

[node name="GeradorCano" type="Node2D" parent="." node_paths=PackedStringArray("textoCanos")]
script = ExtResource("5_t88pq")
cano = ExtResource("3_sb48q")
canoEspecial = ExtResource("5_yyih5")
textoCanos = NodePath("../CanvasLayer/HUD/pontuacao")

[node name="Cano" parent="GeradorCano" instance=ExtResource("3_sb48q")]
texture_filter = 1
position = Vector2(267, 278)

[node name="Cano especial" parent="GeradorCano" instance=ExtResource("5_yyih5")]
position = Vector2(667.5, 695)

[node name="chaoParallax" type="Parallax2D" parent="."]
texture_filter = 1
repeat_size = Vector2(578.06, 0)
autoscroll = Vector2(-200, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="chaoParallax"]
position = Vector2(892, 653)
scale = Vector2(2, 2)
texture = ExtResource("5_r0x5m")

[node name="Area2D" type="Area2D" parent="chaoParallax"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chaoParallax/Area2D"]
position = Vector2(845, 656)
shape = SubResource("RectangleShape2D_t88pq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="pontuacao" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -319.0
offset_right = -3.0
offset_bottom = -302.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_r0x5m")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Highscore Legenda" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
offset_right = 114.0
offset_bottom = 27.0
scale = Vector2(2, 2)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_r0x5m")
text = "Highscore"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Highscore Legenda2" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
offset_left = 2.0
offset_top = 54.0
offset_right = 116.0
offset_bottom = 81.0
scale = Vector2(2, 2)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_r0x5m")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Escuridao" type="ColorRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Gameover" type="Control" parent="CanvasLayer"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Gameover"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -214.0
offset_right = -3.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("8_joorw")

[node name="Button" type="Button" parent="CanvasLayer/Gameover"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -31.5
offset_right = 112.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_r0x5m")
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="Start" type="Control" parent="CanvasLayer"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -363.0
offset_right = 1.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("9_2vekm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qjyg3")
}

[node name="Passaro" parent="." instance=ExtResource("1_wbfu4")]
position = Vector2(2, -15)
scale = Vector2(1.5, -1.5)
collision_mask = 3
gravity_space_override = 1
gravity_point = true
gravity_point_unit_distance = 1.878
linear_damp_space_override = 1
angular_damp_space_override = 1
gravityY = -23.0
impulse = -10

[node name="SFXGravidade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_gwjdr")

[node name="SFXVento" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_lvtmh")

[connection signal="stateChange" from="." to="." method="_on_state_change"]
[connection signal="CanoGerado" from="GeradorCano" to="." method="_on_gerador_cano_cano_gerado"]
[connection signal="button_down" from="CanvasLayer/Gameover/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="CanvasLayer/Gameover/Button" to="." method="_on_button_button_up"]
[connection signal="area_entered" from="Passaro" to="." method="_on_passaro_area_entered"]
